// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|SelectInput default 1`] = `
.c0 {
  padding: 12px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c4 {
  position: relative;
}

.c11 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c13 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c10 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c10 {
  font-size: 1.5em;
}

.c25 .c10 {
  font-size: 1.5em;
}

.c26 .c10 {
  font-size: 1.5em;
}

.c27 .c10 {
  font-size: 1.5em;
}

.c28 .c10 {
  font-size: 1.5em;
}

.c29 .c10 {
  font-size: 1.5em;
}

.c30 .c10 {
  font-size: 1.5em;
}

.c31 .c10 {
  font-size: 1.5em;
}

.c32 .c10 {
  font-size: 1.5em;
}

.c33 .c10 {
  font-size: 1.5em;
}

.c34 .c10 {
  font-size: 1.5em;
}

.c35 .c10 {
  font-size: 1.5em;
}

.c36 .c10 {
  font-size: 1.5em;
}

.c37 .c10 {
  font-size: 1.5em;
}

.c38 .c10 {
  font-size: 1.5em;
}

.c39 .c10 {
  font-size: 1.5em;
}

.c40 .c10 {
  font-size: 1.5em;
}

.c41 .c10 {
  font-size: 1.5em;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c42 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c43 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c44 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  position: relative;
}

.c5 .c10 {
  pointer-events: none;
}

.c45 .c10 {
  pointer-events: none;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c7:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c7:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c6[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(1, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          data-test="adornment-wrapper"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <input
              className="c6 c7"
              disabled={true}
              onChange={[Function]}
              placeholder="Choose option"
              style={
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": "100%",
                }
              }
              type="text"
            />
          </div>
          <span
            className="c8"
            data-test="left-adornment"
          />
          <span
            className="c9"
            data-test="right-adornment"
          >
            <span
              className="c10 c11"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="c12"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput disabled 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c2 {
  position: relative;
}

.c9 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c11 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c8 {
  font-size: 1.5em;
}

.c23 .c8 {
  font-size: 1.5em;
}

.c24 .c8 {
  font-size: 1.5em;
}

.c25 .c8 {
  font-size: 1.5em;
}

.c26 .c8 {
  font-size: 1.5em;
}

.c27 .c8 {
  font-size: 1.5em;
}

.c28 .c8 {
  font-size: 1.5em;
}

.c29 .c8 {
  font-size: 1.5em;
}

.c30 .c8 {
  font-size: 1.5em;
}

.c31 .c8 {
  font-size: 1.5em;
}

.c32 .c8 {
  font-size: 1.5em;
}

.c33 .c8 {
  font-size: 1.5em;
}

.c34 .c8 {
  font-size: 1.5em;
}

.c35 .c8 {
  font-size: 1.5em;
}

.c36 .c8 {
  font-size: 1.5em;
}

.c37 .c8 {
  font-size: 1.5em;
}

.c38 .c8 {
  font-size: 1.5em;
}

.c39 .c8 {
  font-size: 1.5em;
}

.c40 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c41 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c42 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
}

.c3 .c8 {
  pointer-events: none;
}

.c43 .c8 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c10:hover {
  border: 1px solid #999;
}

.c10:focus {
  border: 1px solid #222;
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4[disabled] {
  cursor: not-allowed;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Disabled"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c10"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Disabled"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput outlined 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c2 {
  position: relative;
}

.c9 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c10 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c8 {
  font-size: 1.5em;
}

.c22 .c8 {
  font-size: 1.5em;
}

.c23 .c8 {
  font-size: 1.5em;
}

.c24 .c8 {
  font-size: 1.5em;
}

.c25 .c8 {
  font-size: 1.5em;
}

.c26 .c8 {
  font-size: 1.5em;
}

.c27 .c8 {
  font-size: 1.5em;
}

.c28 .c8 {
  font-size: 1.5em;
}

.c29 .c8 {
  font-size: 1.5em;
}

.c30 .c8 {
  font-size: 1.5em;
}

.c31 .c8 {
  font-size: 1.5em;
}

.c32 .c8 {
  font-size: 1.5em;
}

.c33 .c8 {
  font-size: 1.5em;
}

.c34 .c8 {
  font-size: 1.5em;
}

.c35 .c8 {
  font-size: 1.5em;
}

.c36 .c8 {
  font-size: 1.5em;
}

.c37 .c8 {
  font-size: 1.5em;
}

.c38 .c8 {
  font-size: 1.5em;
}

.c39 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c41 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
}

.c3 .c8 {
  pointer-events: none;
}

.c42 .c8 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c5:hover {
  border: 1px solid #999;
}

.c5:focus {
  border: 1px solid #222;
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Outlined"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Outlined"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput purposes 1`] = `
.c0 {
  padding: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c3 {
  position: relative;
}

.c10 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c18 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c9 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c9 {
  font-size: 1.5em;
}

.c30 .c9 {
  font-size: 1.5em;
}

.c31 .c9 {
  font-size: 1.5em;
}

.c32 .c9 {
  font-size: 1.5em;
}

.c33 .c9 {
  font-size: 1.5em;
}

.c34 .c9 {
  font-size: 1.5em;
}

.c35 .c9 {
  font-size: 1.5em;
}

.c36 .c9 {
  font-size: 1.5em;
}

.c37 .c9 {
  font-size: 1.5em;
}

.c38 .c9 {
  font-size: 1.5em;
}

.c39 .c9 {
  font-size: 1.5em;
}

.c40 .c9 {
  font-size: 1.5em;
}

.c41 .c9 {
  font-size: 1.5em;
}

.c42 .c9 {
  font-size: 1.5em;
}

.c43 .c9 {
  font-size: 1.5em;
}

.c44 .c9 {
  font-size: 1.5em;
}

.c45 .c9 {
  font-size: 1.5em;
}

.c46 .c9 {
  font-size: 1.5em;
}

.c47 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c48 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c49 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c9 {
  pointer-events: none;
}

.c50 .c9 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c14:hover {
  border: 1px solid #999;
}

.c14:focus {
  border: 1px solid #222;
}

.c14::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c11:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c11:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c12:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c12:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c13:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c13:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c13::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c15 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c15:hover {
  border: 1px solid #999;
}

.c15:focus {
  border: 1px solid #222;
}

.c15::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c16 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c16:hover {
  border: 1px solid #999;
}

.c16:focus {
  border: 1px solid #222;
}

.c16::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c17 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c17:hover {
  border: 1px solid #999;
}

.c17:focus {
  border: 1px solid #222;
}

.c17::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c2 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c6"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Primary"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c11"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Secondary"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c12"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Success"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c13"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Danger"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c14"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Primary"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c15"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Secondary"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c16"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Success"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c3"
        data-test="adornment-wrapper"
      >
        <div
          className="c4"
        >
          <input
            className="c5 c17"
            disabled={true}
            onChange={[Function]}
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
                "width": "100%",
              }
            }
            type="text"
            value="Danger"
          />
        </div>
        <span
          className="c7"
          data-test="left-adornment"
        />
        <span
          className="c8"
          data-test="right-adornment"
        >
          <span
            className="c9 c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput sizes 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c2 {
  position: relative;
}

.c9 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c12 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c8 {
  font-size: 1.5em;
}

.c24 .c8 {
  font-size: 1.5em;
}

.c25 .c8 {
  font-size: 1.5em;
}

.c26 .c8 {
  font-size: 1.5em;
}

.c27 .c8 {
  font-size: 1.5em;
}

.c28 .c8 {
  font-size: 1.5em;
}

.c29 .c8 {
  font-size: 1.5em;
}

.c30 .c8 {
  font-size: 1.5em;
}

.c31 .c8 {
  font-size: 1.5em;
}

.c32 .c8 {
  font-size: 1.5em;
}

.c33 .c8 {
  font-size: 1.5em;
}

.c34 .c8 {
  font-size: 1.5em;
}

.c35 .c8 {
  font-size: 1.5em;
}

.c36 .c8 {
  font-size: 1.5em;
}

.c37 .c8 {
  font-size: 1.5em;
}

.c38 .c8 {
  font-size: 1.5em;
}

.c39 .c8 {
  font-size: 1.5em;
}

.c40 .c8 {
  font-size: 1.5em;
}

.c41 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c42 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c43 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
}

.c3 .c8 {
  pointer-events: none;
}

.c44 .c8 {
  pointer-events: none;
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c10:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c10:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 0.8125rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1.1875rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c11:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c11:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Small"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c10"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Default"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
      data-test="adornment-wrapper"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c11"
          disabled={true}
          onChange={[Function]}
          style={
            Object {
              "paddingLeft": 0,
              "paddingRight": 0,
              "width": "100%",
            }
          }
          type="text"
          value="Large"
        />
      </div>
      <span
        className="c6"
        data-test="left-adornment"
      />
      <span
        className="c7"
        data-test="right-adornment"
      >
        <span
          className="c8 c9"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;
